kubernetes/main/apps/keycloak/deployment/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: keycloak-ingress-policy
spec:
  endpointSelector:
    matchLabels:
      app: keycloak
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: nginx-external
            io.kubernetes.pod.namespace: network
      toPorts:
        - ports:
            - port: "444"
